--- a/record-project/package.json
+++ b/record-project/package.json
@@ -1,6 +1,6 @@
 {
   "name": "record-project",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -13,7 +13,9 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@electron/remote": "^2.0.8",
     "core-js": "^3.6.5",
+    "electron": "^18.0.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -25,7 +27,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
-    "electron": "18.0.3",
+    "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -33,7 +35,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "sass": "^1.51.0",
+    "lib-flexible": "^0.3.2",
+    "postcss-px2rem": "^0.3.0",
+    "sass": "^1.50.0",
     "sass-loader": "10.0.1",
     "vue-cli-plugin-electron-builder": "~2.1.1"
   },
